--- a/{{cookiecutter._project_name_kebab_case}}/pyproject.toml
+++ b/{{cookiecutter._project_name_kebab_case}}/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "{{cookiecutter.project_name_kebab_case}}"
+name = "{{cookiecutter._project_name_kebab_case}}"
 version = "1.0.3"
 description = "{{cookiecutter.project_description}}"
-authors = ["{{cookiecutter.engineer_identity}}"]
+authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
